[gd_scene load_steps=6 format=3 uid="uid://qjg3h4w3liqo"]

[ext_resource type="Script" uid="uid://e8tqgyf5ceb5" path="res://player.gd" id="1_4flbx"]

[sub_resource type="Gradient" id="Gradient_sh265"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(1, 0.48654085, 0.50181925, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_4flbx"]
gradient = SubResource("Gradient_sh265")
width = 128
height = 128

[sub_resource type="RectangleShape2D" id="RectangleShape2D_onrkg"]
size = Vector2(128, 128)

[sub_resource type="CircleShape2D" id="CircleShape2D_4flbx"]
radius = 800.0

[node name="Player" type="Area2D"]
collision_mask = 10
script = ExtResource("1_4flbx")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("GradientTexture2D_4flbx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_onrkg")

[node name="FireRange" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="FireRange"]
shape = SubResource("CircleShape2D_4flbx")
debug_color = Color(0.9764706, 0, 0.40392157, 0.11764706)

[node name="FireTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="FireRange" to="." method="_on_fire_range_body_entered"]
[connection signal="timeout" from="FireTimer" to="." method="_on_fire_timer_timeout"]
